# palethea-downloader

./: .gitignore  README.md  release.py
.github/workflows/: build-desktop.yml  create-release-tag.yml
app/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
app/electron/: main.cjs  preload.cjs
app/native-backend/: .env.example  Cargo.toml
app/native-backend/src/: main.rs
app/scripts/: download-binary-utils.mjs  download-ffmpeg.mjs  download-yt-dlp.mjs  prepare-desktop.mjs
app/src/: App.jsx  api.js  downloadHistory.js  index.css  main.jsx  mediaLabels.js  mediaMetadata.js  sourceBranding.js  utilities_current.css  utilities_old.css  utilityTransforms.js
app/src/components/: AudioVisualizer.jsx  ConfirmationModal.jsx  ContextMenu.jsx  CustomDropdown.jsx  Footer.jsx  Icons.jsx  MediaPlayer.css  MediaPlayer.jsx  Nav.jsx  SettingsModal.jsx  Sidebar.jsx  ThumbnailImage.jsx  TitleBar.jsx  Toast.jsx  Tooltip.jsx
app/src/pages/: Downloaded.jsx  Home.jsx  HomePage.jsx  HowItWorks.jsx  Premium.jsx  Settings.jsx  SupportedSites.jsx  Utilities.jsx
scripts/: create-version-tag.mjs
